// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`infobar actions execute action fail 1`] = `
Array [
  Object {
    "closeOnNext": true,
    "dismissAfter": 0,
    "message": "Executing action...",
    "status": "loading",
    "type": "NOTIFY-MOCK",
  },
  Object {
    "callback": [MockFunction],
    "data": Object {
      "action_id": "shopifyRefundShippingCostOfOrder-34-5-f086fd149f679a11cf4d5378daa3a994cd70689a",
      "action_label": undefined,
      "action_name": "shopifyRefundShippingCostOfOrder",
      "integration_id": "5",
      "payload": Object {
        "order_id": 4194477515,
      },
      "ticket_id": "1",
      "user_id": "34",
    },
    "id": "shopifyRefundShippingCostOfOrder-34-5-f086fd149f679a11cf4d5378daa3a994cd70689a",
    "type": "EXECUTE_ACTION_START",
  },
  Object {
    "data": Object {
      "action_id": "shopifyRefundShippingCostOfOrder-34-5-f086fd149f679a11cf4d5378daa3a994cd70689a",
      "action_label": undefined,
      "action_name": "shopifyRefundShippingCostOfOrder",
      "integration_id": "5",
      "payload": Object {
        "order_id": 4194477515,
      },
      "ticket_id": "1",
      "user_id": "34",
    },
    "error": [Error: Request failed with status code 400],
    "id": "shopifyRefundShippingCostOfOrder-34-5-f086fd149f679a11cf4d5378daa3a994cd70689a",
    "reason": "Failed to execute action shopifyRefundShippingCostOfOrder on customer #34 for integration 5",
    "type": "EXECUTE_ACTION_ERROR",
  },
]
`;

exports[`infobar actions execute action success 1`] = `
Array [
  Object {
    "closeOnNext": true,
    "dismissAfter": 0,
    "message": "Executing action...",
    "status": "loading",
    "type": "NOTIFY-MOCK",
  },
  Object {
    "callback": [MockFunction],
    "data": Object {
      "action_id": "shopifyRefundShippingCostOfOrder-34-5-f086fd149f679a11cf4d5378daa3a994cd70689a",
      "action_label": undefined,
      "action_name": "shopifyRefundShippingCostOfOrder",
      "integration_id": "5",
      "payload": Object {
        "order_id": 4194477515,
      },
      "ticket_id": "1",
      "user_id": "34",
    },
    "id": "shopifyRefundShippingCostOfOrder-34-5-f086fd149f679a11cf4d5378daa3a994cd70689a",
    "type": "EXECUTE_ACTION_START",
  },
]
`;

exports[`infobar actions handle executed action display error 1`] = `
Array [
  Object {
    "buttons": Array [
      Object {
        "name": "Review",
        "onClick": [Function],
        "primary": true,
      },
    ],
    "dismissAfter": 0,
    "message": "No way",
    "status": "error",
    "title": "Something went wrong on your last action 😞",
    "type": "NOTIFY-MOCK",
  },
  Object {
    "data": Object {
      "action_id": "someId",
      "msg": "[SHOPIFY] [full-refund] No way",
      "payload": Object {},
      "status": "error",
    },
    "id": "someId",
    "type": "EXECUTE_ACTION_ERROR",
  },
]
`;

exports[`infobar actions handle executed action display error from ticket currently on 1`] = `
Array [
  Object {
    "buttons": Array [
      Object {
        "name": "Review",
        "onClick": [Function],
        "primary": true,
      },
    ],
    "dismissAfter": 0,
    "message": "No way",
    "status": "error",
    "title": "Something went wrong on your last action 😞",
    "type": "NOTIFY-MOCK",
  },
  Object {
    "data": Object {
      "action_id": "someId",
      "msg": "[SHOPIFY] [full-refund] No way",
      "payload": Object {},
      "status": "error",
      "ticket_id": "1",
    },
    "id": "someId",
    "type": "EXECUTE_ACTION_ERROR",
  },
]
`;

exports[`infobar actions handle executed action display error from ticket not currently on 1`] = `
Array [
  Object {
    "buttons": Array [
      Object {
        "name": "Review",
        "onClick": [Function],
        "primary": true,
      },
    ],
    "dismissAfter": 0,
    "message": "No way",
    "status": "error",
    "title": "Something went wrong on your last action 😞",
    "type": "NOTIFY-MOCK",
  },
  Object {
    "data": Object {
      "action_id": "someId",
      "msg": "[SHOPIFY] [full-refund] No way",
      "payload": Object {},
      "status": "error",
      "ticket_id": "2",
    },
    "id": "someId",
    "type": "EXECUTE_ACTION_ERROR",
  },
]
`;

exports[`infobar actions handle executed action success 1`] = `
Array [
  Object {
    "status": "success",
    "title": "Action successfully executed",
    "type": "NOTIFY-MOCK",
  },
  Object {
    "data": Object {
      "action_id": "someId",
      "payload": Object {},
      "status": "success",
    },
    "id": "someId",
    "type": "EXECUTE_ACTION_SUCCESS",
  },
]
`;

exports[`infobar actions search should dispatch search results on success 1`] = `
Array [
  Object {
    "type": "SEARCH_CUSTOMERS_START",
  },
  Object {
    "resp": Object {
      "data": Array [
        Object {
          "id": 1,
          "name": "alex",
        },
      ],
    },
    "type": "SEARCH_CUSTOMERS_SUCCESS",
  },
]
`;

exports[`infobar actions search should not dispatch results when cancelling the search 1`] = `
Array [
  Object {
    "type": "SEARCH_CUSTOMERS_START",
  },
]
`;

exports[`infobar actions similarCustomer should reject on any error 1`] = `
Array [
  Object {
    "type": "SEARCH_SIMILAR_CUSTOMER_START",
  },
  Object {
    "reason": "Failed to search for similar customers. Please try again...",
    "type": "SEARCH_SIMILAR_CUSTOMER_ERROR",
  },
]
`;

exports[`infobar actions similarCustomer should resolve with a similar customer 1`] = `
Array [
  Object {
    "type": "SEARCH_SIMILAR_CUSTOMER_START",
  },
  Object {
    "customer": Object {
      "id": 1,
      "name": "alex",
    },
    "type": "SEARCH_SIMILAR_CUSTOMER_SUCCESS",
  },
]
`;
